# cargo-mcp

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.clinerules/: workflow.md
.duvet/: config.toml  snapshot.txt
.duvet/requirements/docs/design/technical-spec/: caching-requirements.toml  configuration.toml  crate-documentation-resource.toml  crate-information-resource.toml  error-handling.toml  general.toml  implementation-notes.toml  performance-considerations.toml  project-metadata-resource.toml  resources.toml  security-considerations.toml
.github/workflows/: ci.yml
cargo-mcp/: Cargo.toml
cargo-mcp/src/: error.rs  instructions.md  lib.rs  main.rs  server.rs
cargo-mcp/src/providers/: crates_io.rs  link.rs  metadata.rs  rustdoc.rs
cargo-mcp/src/tests/: general.rs  mod.rs  rustdoc.rs  tools.rs
docs/design/: README.md  SUMMARY.md  examples.md  implementation-guide.md  technical-spec.md
examples/: playground.rs
mcp-repl/: Cargo.toml
mcp-repl/src/: client.rs  completer.rs  main.rs  prompt.rs  repl.rs  term.rs
src/: cache.rs  config.rs  error.rs  lib.rs  main.rs  providers.rs  server.rs  types.rs
src/providers/: crates_io.rs  metadata.rs  rustdoc.rs
src/tests/: caching.rs  configuration.rs  error_handling.rs  general.rs  mod.rs  performance.rs  resources.rs  rustdoc.rs  security.rs  tools.rs
