[package]
name = "cargo-mcp"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
rmcp = { workspace = true, features = ["server", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rustup-toolchain = "0.1"
rustdoc-json = "0.9"
rustdoc-types = "0.53"
thiserror = "2"
cargo_metadata = "0.21"
url = { version = "2", features = ["serde"] }
tempfile = "3.8"
tokio-util = { version = "0.7" }
tokio-stream = { version = "0.1", features = ["sync"] }
crates-index = "3.10.0"
http = "1.3.1"
reqwest.workspace = true
semver = "1.0"
strsim = "0.11"
schemars = "1.0.4"

[dev-dependencies]
rmcp = { workspace = true, features = ["client"] }
tempfile = "3"
futures.workspace = true
tokio = { version = "1.0", features = ["full", "test-util"] }
