[package]
name = "mcp-repl"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = "4.5.4"
crossterm = { version = "0.29.0" }
futures = { workspace = true }
json5 = "0.4"
nu-ansi-term = { version = "0.50.0" }
reedline = { version = "0.40.0", features = ["external_printer"] }
regex = "1.10.4"
rmcp = { workspace = true, features = [
    "client",
    "reqwest",
    "transport-child-process",
    "transport-streamable-http-client",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true, features = [
    "io-std",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
    "net",
    "process",
] }
yansi = "1.0.1"
