[package]
name = "mcp-repl"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = { version = "0.29" }
futures = { workspace = true }
json5 = "0.4"
nu-ansi-term = { version = "0.50" }
reedline = { version = "0.40", features = ["external_printer"] }
rmcp = { workspace = true, features = [
    "client",
    "reqwest",
    "transport-child-process",
    "transport-streamable-http-client",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = [
    "io-std",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
    "net",
    "process",
] }
yansi = "1"
